feat: Index com link para cartão e previa de invest.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- TOPO / HEADER -->
   <header>
-    <div class="top-bar">
+    <div class="top-bar_C">
       <!-- Espaço para mensagens rápidas ou links menores -->
       <span>Para empresas / novidades / ajuda</span>
     </div>
@@ -20,6 +20,7 @@
         <a href="#sobre">Sobre</a>
         <a href="#ajuda">Ajuda</a>
         <a href="#contato">Contato</a>
+        
       </nav>
     </div>
   </header>
@@ -29,7 +30,7 @@
     <div class="banner-texto">
       <h1>Seu banco digital com leveza e transparência</h1>
       <p>Modernize sua vida financeira com o PineBank.</p>
-      <button>Abrir Conta</button>
+      <a href="/cadastro/cadastro.html"><button>Abrir Conta</button></a>
     </div>
   </section>
 
@@ -37,8 +38,8 @@
     <!-- COLUNA ESQUERDA: links rápidos ou destaques -->
     <aside class="col-esq">
       <ul class="destaques">
-        <li><a href="#">Cartão sem anuidade</a></li>
-        <li><a href="#">Investimentos</a></li>
+        <li><a href="/cartão/cartão.html">Cartão sem anuidade</a></li>
+        <li><a href="Investimentos/investimentos.html">Investimentos</a></li>
         <li><a href="#">Empréstimo pessoal</a></li>
         <li><a href="#">Seguros</a></li>
       </ul>
@@ -57,12 +58,12 @@
           <div class="prod-card">
             <h3>Cartão Pine</h3>
             <p>Sem anuidade, controle pelo app</p>
-            <a href="#">Saiba mais »</a>
+            <a href="/cartão/cartão.html">Saiba mais »</a>
           </div>
           <div class="prod-card">
             <h3>Investimentos</h3>
             <p>Seus recursos rendendo sempre</p>
-            <a href="#">Saiba mais »</a>
+            <a href="/Investimentos/investimentos.html">Saiba mais »</a>
           </div>
         </div>
       </section>
