feat: adiciona interatividade na página de login, cadastro e redefinição de senha

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="banner-texto">
       <h1>Seu banco digital com leveza e transparência</h1>
       <p>Modernize sua vida financeira com o PineBank.</p>
-      <a href="/cadastro/cadastro.html"><button>Abrir Conta</button></a>
+      <a href="/cadastro/login.html"><button>Abrir Conta</button></a>
     </div>
   </section>
 
