--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <title>PineBank - Entre você e suas finanças</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" type="imagex/png" href="icon.ico">
 </head>
 <body>
 
   <!-- TOPO / HEADER -->
-  <header>
-    <div class="top-bar_C">
-      <!-- Espaço para mensagens rápidas ou links menores -->
-      <span>Para empresas / novidades / ajuda</span>
-    </div>
+ <header>
+  <div class="header-content">
     <div class="main-header">
-      <div class="logo">🍍 PineBank</div>
+      <div class="logo">
+          <img src="abacaxi.png" alt="Logo PineBank" class="logo-img">
+      </div>
       <nav class="menu-principal">
         <a href="#produtos">Produtos & Serviços</a>
         <a href="#sobre">Sobre</a>
         <a href="#ajuda">Ajuda</a>
         <a href="#contato">Contato</a>
-        
       </nav>
     </div>
-  </header>
+  </div>
+</header>
 
   <!-- BANNER / HERO com destaque -->
   <section class="banner">
@@ -100,3 +100,4 @@
 
 </body>
 </html>
+
