fix:Ajuste no redirecionamento do botão "Peça o seu".

--- a/cartão/cartão.html
+++ b/cartão/cartão.html
@@ -36,7 +36,7 @@
         </div>
         <button id="btn-proximo">→</button>
       </div>
-      <a href="../cadastro/cadastro.html" class="btn-principal">Peça o seu 🍍</a>
+      <a href="../cadastro/login.html" class="btn-principal">Peça o seu 🍍</a>
     </div>
   </section>
     </div>
