adição tela de termos de uso

--- a/cadastro/abrir-conta.html
+++ b/cadastro/abrir-conta.html
@@ -49,7 +49,7 @@
 
             <div class="checkbox-group">
                 <input type="checkbox" id="termos" name="termos" required>
-                <label for="termos">Li e concordo com os <a href="#">Termos e Condições</a></label>
+                <label for="termos">Li e concordo com os <a href="termos.html">Termos e Condições</a></label>
             </div>
 
             <button type="submit" class="cadastro-button">Cadastrar</button>
