--- a/cadastro/transferir.html
+++ b/cadastro/transferir.html
@@ -13,14 +13,13 @@
  <aside class="sidebar">
 <div class="logo-area">
  <img src="pineapple-logo.png" alt="Logo Pineapple" class="logo-small">
- <h3>Pineapple</h3>
  </div>
  <nav class="main-nav">
 <a href="conta.html" class="nav-item"><i class="fas fa-home"></i> Início</a>
  <a href="investimentos.html" class="nav-item"><i class="fas fa-chart-line"></i> Investimentos</a>
 <a href="#" class="nav-item"><i class="fas fa-credit-card"></i> Cartões</a>
 <a href="transferir.html" class="nav-item active"><i class="fas fa-exchange-alt"></i> Transferências</a>
-<a href="#" class="nav-item"><i class="fas fa-file-invoice"></i> Extrato</a>
+<a href="extrato.html" class="nav-item"><i class="fas fa-file-invoice"></i> Extrato</a>
 <a href="login.html" class="nav-item logout"><i class="fas fa-sign-out-alt"></i> Sair</a>
 </nav>
  </aside>
