--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header-content">
     <div class="main-header">
       <div class="logo">
-          <img src="abacaxi.png" alt="Logo PineBank" class="logo-img">
+          <div class="logo">🍍 PineBank</div>
       </div>
       <nav class="menu-principal">
         <a href="#produtos">Produtos & Serviços</a>
@@ -41,7 +41,7 @@
         <li><a href="/cartão/cartão.html">Cartão sem anuidade</a></li>
         <li><a href="Investimentos/investimentos.html">Investimentos</a></li>
         <li><a href="emprestimo/emprestimo.html">Empréstimo pessoal</a></li>
-        <li><a href="#">Seguros</a></li>
+        <li><a href="seguros/seguros.html">Seguros</a></li>
       </ul>
     </aside>
 
