style:Adicionado icone do banco em todas as guias

--- a/cadastro/abrir-conta.html
+++ b/cadastro/abrir-conta.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro | Banco Pineapple</title>
+    <title>Cadastro | Banco Pineapple</title> 
+    <link rel="icon" type="image/x-icon" href="../icon.ico">
     <link rel="stylesheet" href="style-abrirConta.css">
     <script src="script-abrirConta.js" defer></script>
 </head>
