--- a/emprestimo/emprestimo.html
+++ b/emprestimo/emprestimo.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Empréstimos PineBank</title>
+  <title>Empréstimos PineBank</title> 
+  <link rel="icon" type="image/x-icon" href="../icon.ico">
   <link rel="stylesheet" href="style-emprestimo.css">
 </head>
 <body>
