--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>PineBank - Entre você e suas finanças</title>
+  <title>PineBank - Entre você e suas finanças</title> 
+  <link rel="icon" type="image/x-icon" href="icon.ico">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="imagex/png" href="icon.ico">
 </head>
 <body>
 
