--- a/seguros/seguros.html
+++ b/seguros/seguros.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Seguros PineBank</title>
+  <title>Seguros PineBank</title> 
+  <link rel="icon" type="image/x-icon" href="../icon.ico">
   <link rel="stylesheet" href="style-seguros.css">
 </head>
 <body>
