--- a/cadastro/conta.html
+++ b/cadastro/conta.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Início | Banco Pineapple</title>
+    <title>Início | Banco Pineapple</title> 
+    <link rel="icon" type="image/x-icon" href="../icon.ico">
     <link rel="stylesheet" href="style-conta.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
