--- a/cadastro/redefinir-senha.html
+++ b/cadastro/redefinir-senha.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redefinir Senha | Banco Pineapple</title>
+    <title>Redefinir Senha | Banco Pineapple</title> 
+    <link rel="icon" type="image/x-icon" href="../icon.ico">
     <link rel="stylesheet" href="style-redefinirSenha.css">
     <script src="script-redefinirSenha.js" defer></script>
 </head>
