--- a/cartão/cartão.html
+++ b/cartão/cartão.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Cartões PineBank</title>
+  <title>Cartões PineBank</title> 
+  <link rel="icon" type="image/x-icon" href="../icon.ico">
   <link rel="stylesheet" href="style-cartao.css">
 </head>
 <body>
