refactor: edita a seção 'quem somos' da página inicial

--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
 
       <section id="sobre" class="sobre">
         <h2>Quem somos</h2>
-        <p>O PineBank nasce para trazer uma abordagem humana ao universo financeiro. Transparência, leveza e tecnologia para servir você.</p>
+        <p>O PineBank nasceu em 2025 com a missão de redefinir sua experiência financeira. Somos uma 
+          fintech que une tecnologia de ponta com um atendimento genuinamente humano, oferecendo uma 
+          plataforma completa.</p>
+          <p>Transparência, leveza e controle total são os pilares que nos movem, 
+          garantindo que você tenha a melhor experiência para cuidar do seu dinheiro.</p>
+          <p>Com o PineBank, tenha sempre seu dinheiro <strong>seguro</strong> e <strong>doce</strong>!</p>
       </section>
     </main>
 
