adicionado pagina de meus cartoes e funcionaliades dele

--- a/cadastro/conta.html
+++ b/cadastro/conta.html
@@ -18,7 +18,7 @@
             <nav class="main-nav">
                 <a href="conta.html" class="nav-item active"><i class="fas fa-home"></i> Início</a>
                 <a href="investimentos.html" class="nav-item"><i class="fas fa-chart-line"></i> Investimentos</a>
-                <a href="#" class="nav-item"><i class="fas fa-credit-card"></i> Cartões</a>
+                <a href="cartoes.html" class="nav-item"><i class="fas fa-credit-card"></i> Cartões</a>
                 <a href="transferir.html" class="nav-item"><i class="fas fa-exchange-alt"></i> Transferências</a> 
                 <a href="extrato.html" class="nav-item"><i class="fas fa-file-invoice"></i> Extrato</a>
                 <a href="login.html" id="logout-btn" class="nav-item logout"><i class="fas fa-sign-out-alt"></i> Sair</a>
