feat:Página de Termos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- RODAPÉ -->
   <footer>
     <div class="links-rodape">
-      <a href="#">Termos de Uso</a> | 
+      <a href="termos.html">Termos de Uso</a> | 
       <a href="#">Privacidade</a> | 
       <a href="#">Sobre</a> | 
       <a href="#">Contato</a>
