--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="prod-card">
             <h3>Conta digital completa</h3>
             <p>Sem tarifas escondidas</p>
-            <a href="#">Saiba mais »</a>
+            <a href="cadastro/login.html">Saiba mais »</a>
           </div>
           <div class="prod-card">
             <h3>Cartão Pine</h3>
@@ -95,7 +95,7 @@
   <!-- RODAPÉ -->
   <footer>
     <div class="links-rodape">
-      <a href="#">Termos de Uso</a> | 
+      <a href="termos.html">Termos de Uso</a> | 
       <a href="#">Privacidade</a> | 
       <a href="#">Sobre</a> | 
       <a href="#">Contato</a>
