feat: adiciona termo de privacidade

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <footer>
     <div class="links-rodape">
       <a href="termos.html">Termos de Uso</a> | 
-      <a href="#">Privacidade</a> | 
+      <a href="privacidade.html">Privacidade</a> | 
       <a href="#">Sobre</a> | 
       <a href="#">Contato</a>
     </div>
