fix:Remoção de texto placeholder em Privacidade.

--- a/privacidade.html
+++ b/privacidade.html
@@ -39,7 +39,7 @@
       <p>Recomenda-se que os usuários não insiram dados verdadeiros durante o uso da plataforma, uma vez que o sistema não possui mecanismos de segurança voltados para proteção de informações pessoais.</p>
       
       <h2>3. Uso de Cookies</h2>
-      <p>O PineBank pode usar cookies estritamente necessários para o funcionamento básico do site (como manter uma sessão simulada). Não usamos cookies de rastreamento (tracking) ou publicidade de terceiros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>O PineBank pode usar cookies estritamente necessários para o funcionamento básico do site (como manter uma sessão simulada). Não usamos cookies de rastreamento (tracking) ou publicidade de terceiros.</p>
 
       <h2>4. Links para Outros Sites</h2>
       <p>Nosso serviço pode conter links para sites de terceiros ou serviços que não são de propriedade ou controlados pelo PineBank. Não temos controle e não assumimos responsabilidade pelo conteúdo, políticas de privacidade ou práticas de sites ou serviços de terceiros.</p>
