--- a/cadastro/conta.html
+++ b/cadastro/conta.html
@@ -54,7 +54,7 @@
                     <i class="fas fa-hand-holding-usd"></i>
                     <span>Empréstimo</span>
                 </a>
-                <a href="#" class="action-item">
+                <a href="depositar.html" class="action-item">
                     <i class="fas fa-money-check-alt"></i>
                     <span>Depositar</span>
                 </a>
