feat:Caixinha de contato

--- a/index.html
+++ b/index.html
@@ -98,8 +98,24 @@
       <a href="termos.html">Termos de Uso</a> | 
       <a href="privacidade.html">Privacidade</a> | 
       <a href="#">Sobre</a> | 
-      <a href="#">Contato</a>
-    </div>
+      
+      <div class="contato-wrapper">
+        <span class="contato-btn">Contato</span>
+        
+        <div class="contato-box">
+          <h4>Canais de Atendimento</h4>
+          <p>
+            <strong>Email:</strong><br>
+            contato@pinebank.com
+          </p>
+          <p>
+            <strong>Telefone:</strong><br>
+            (11) 4002-8922
+          </p>
+          <span>(Este é um projeto acadêmico)</span>
+        </div>
+      </div>
+      </div>
     <p>&copy; 2025 PineBank. Todos os direitos reservados.</p>
   </footer>
 
