feat:adicionado pagina de pagar contas com codigo de barras

--- a/cadastro/cofrinho.html
+++ b/cadastro/cofrinho.html
@@ -22,7 +22,7 @@
                 <a href="investimentos.html" class="nav-item"><i class="fas fa-chart-line"></i> Investimentos</a>
                 <a href="extrato.html" class="nav-item"><i class="fas fa-file-invoice"></i> Extrato</a>
                 <a href="cofrinho.html" class="nav-item active"><i class="fas fa-piggy-bank"></i> Cofrinho</a> 
-                <a href="#" class="nav-item logout"><i class="fas fa-sign-out-alt"></i> Sair</a>
+                <a href="login.html" class="nav-item logout"><i class="fas fa-sign-out-alt"></i> Sair</a>
             </nav>
         </aside>
 
