--- a/cadastro/conta.html
+++ b/cadastro/conta.html
@@ -46,7 +46,7 @@
                 <a href="transferir.html" class="action-item"> <i class="fas fa-qrcode"></i>
                     <span>Pix</span>
                 </a>
-                <a href="#" class="action-item">
+                <a href="pagar.html" class="action-item">
                     <i class="fas fa-barcode"></i>
                     <span>Pagar</span>
                 </a>
