--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PineBank - Entre você e suas finanças</title> 
   <link rel="icon" type="image/x-icon" href="icon.ico">
   <link rel="stylesheet" href="style.css">
@@ -114,7 +115,6 @@
           </p>
           <span>(Este é um projeto acadêmico)</span>
         </div>
-      </div>
       </div>
     <p>&copy; 2025 PineBank. Todos os direitos reservados.</p>
   </footer>
