--- a/seguros/seguros.html
+++ b/seguros/seguros.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seguros PineBank</title> 
   <link rel="icon" type="image/x-icon" href="../icon.ico">
   <link rel="stylesheet" href="style-seguros.css">
@@ -11,8 +12,6 @@
   <header>
     <div class="logo">🍍 PineBank</div>
     <nav>
-      <a href="../cartão/cartão.html">Cartões</a>
-      <a href="../emprestimo/emprestimo.html">Empréstimos</a>
       <a href="../index.html">← Início</a>
     </nav>
   </header>
