--- a/emprestimo/emprestimo.html
+++ b/emprestimo/emprestimo.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Empréstimos PineBank</title> 
   <link rel="icon" type="image/x-icon" href="../icon.ico">
   <link rel="stylesheet" href="style-emprestimo.css">
