--- a/privacidade.html
+++ b/privacidade.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Política de Privacidade - PineBank</title>
   
   <link rel="stylesheet" href="style-termos.css">
