--- a/termos.html
+++ b/termos.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Termos de Uso - PineBank</title>
   <link rel="stylesheet" href="style-termos.css">
   <link rel="icon" type="image/x-icon" href="icon.ico">
