--- a/cadastro/investimentos.html
+++ b/cadastro/investimentos.html
@@ -55,7 +55,7 @@
                     <i class="fas fa-calculator"></i>
                     <span>Simulador</span>
                 </a>
-                <a href="#" class="action-item">
+                <a href="consultoria.html" class="action-item">
                     <i class="fas fa-headset"></i>
                     <span>Consultoria</span>
                 </a>
