refactor:Melhoria pagina de investimentos

--- a/termos.html
+++ b/termos.html
@@ -22,7 +22,7 @@
       <h1>Termos de Uso do PineBank</h1>
       <p class="data-atualizacao">Última atualização: 20 de outubro de 2025</p>
 
-      <p>Bem-vindo ao PineBank. Estes termos e condições descrevem as regras para usar o website da PineBank, localizado em https://www.seusite.com/. Ao acessar este site, presumimos que você aceita estes termos e condições. Não continue a usar o PineBank se não concordar com todos os termos e condições declarados nesta página.</p>
+      <p>Bem-vindo ao PineBank. Estes termos e condições descrevem as regras para usar o website da PineBank, localizado em https://pine-bank-zeta.vercel.app/. Ao acessar este site, presumimos que você aceita estes termos e condições. Não continue a usar o PineBank se não concordar com todos os termos e condições declarados nesta página.</p>
 
       <h2>1. Aceitação dos Termos</h2>
       <p>Ao utilizar o PineBank, você reconhece que o site é um projeto acadêmico, destinado apenas a fins educacionais e de demonstração.</p>
