--- a/Investimentos/investimentos.html
+++ b/Investimentos/investimentos.html
@@ -113,21 +113,21 @@
                     <i class="fas fa-shield-alt"></i>
                     <h3>Renda Fixa e CDB</h3>
                     <p>Segurança máxima para sua Reserva de Emergência com liquidez e rendimentos de até 120% do CDI.</p>
-                    <a href="#">Saiba mais »</a>
+                    <a href="marketing-rendafixa.html">Saiba mais »</a>
                 </div>
                 
                 <div class="oferta-card">
                     <i class="fas fa-chart-pie"></i>
                     <h3>Fundos de Investimento</h3>
                     <p>Diversificação global e gestão profissional, ideal para quem busca rentabilidade acima da média.</p>
-                    <a href="#">Saiba mais »</a>
+                    <a href="marketing-fundos.html">Saiba mais »</a>
                 </div>
                 
                 <div class="oferta-card">
                     <i class="fas fa-rocket"></i>
                     <h3>Renda Variável</h3>
                     <p>Invista em Ações, FIIs e ETFs. Plataforma completa para o investidor arrojado.</p>
-                    <a href="#">Saiba mais »</a>
+                    <a href="marketing-variavel.html">Saiba mais »</a>
                 </div>
             </div>
         </section>
