feat:adicionado paginas lci-lca/cdb/tesouro/fundos dentro dos investimentos

--- a/cadastro/investimentos.html
+++ b/cadastro/investimentos.html
@@ -65,7 +65,7 @@
                 <h2>Conheça Nossos Produtos de Renda Fixa</h2>
                 <div class="product-list">
                     
-                    <a href="#" class="product-card" id="card-cdb">
+                    <a href="cdb.html" class="product-card" id="card-cdb">
                         <i class="product-icon fas fa-certificate"></i>
                         <div class="product-details">
                             <h3>CDB Pineapple</h3>
@@ -73,7 +73,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="product-card" id="card-tesouro">
+                    <a href="tesouro.html" class="product-card" id="card-tesouro">
                         <i class="product-icon fas fa-shield-alt"></i>
                         <div class="product-details">
                             <h3>Tesouro Direto</h3>
@@ -81,7 +81,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="product-card" id="card-lci">
+                    <a href="lci-lca.html" class="product-card" id="card-lci">
                         <i class="product-icon fas fa-house-damage"></i>
                         <div class="product-details">
                             <h3>LCI e LCA</h3>
@@ -89,7 +89,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="product-card" id="card-fundos">
+                    <a href="fundos.html" class="product-card" id="card-fundos">
                         <i class="product-icon fas fa-chart-pie"></i>
                         <div class="product-details">
                             <h3>Fundos de Investimento</h3>
