feat:adicionado tela de simulaçao de investimentos

--- a/Investimentos/marketing-fundos.html
+++ b/Investimentos/marketing-fundos.html
@@ -44,8 +44,8 @@
         
         <div class="content-section">
             <h2>Nossas Categorias de Fundos</h2>
-            <p>**Fundos Multimercado:** Para quem busca um equilíbrio entre risco e retorno, com a liberdade de investir em diferentes classes de ativos.</p>
-            <p>**Fundos de Ações:** Indicado para perfis arrojados, buscando retornos significativos através do mercado de capitais.</p>
+            <p>Fundos Multimercado: Para quem busca um equilíbrio entre risco e retorno, com a liberdade de investir em diferentes classes de ativos.</p>
+            <p>Fundos de Ações: Indicado para perfis arrojados, buscando retornos significativos através do mercado de capitais.</p>
         </div>
         
         <a href="investimentos.html" class="btn-voltar-marketing"><i class="fas fa-arrow-left"></i> Voltar à Vitrine de Investimentos</a>
