--- a/cadastro/investimentos.html
+++ b/cadastro/investimentos.html
@@ -51,7 +51,7 @@
                     <i class="fas fa-file-export"></i>
                     <span>Resgatar</span>
                 </a>
-                <a href="#" class="action-item">
+                <a href="simulador.html" class="action-item">
                     <i class="fas fa-calculator"></i>
                     <span>Simulador</span>
                 </a>
