feat:Página Noticias FintechX

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h3>Notícias & Atualizações</h3>
         <ul>
           <li><a href="#">Nova funcionalidade no app Pine</a></li>
-          <li><a href="#">Parceria com fintech X</a></li>
+          <li><a href="noticia-fintech-x.html">Parceria com fintech X</a></li>
           <li><a href="#">Campanha “Pague com Abacaxi”</a></li>
         </ul>
       </div>
