fix:correçao main/footer noticias

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <ul>
           <li><a href="#">Nova funcionalidade no app Pine</a></li>
           <li><a href="noticia-fintech-x.html">Parceria com fintech X</a></li>
-          <li><a href="#">Campanha “Pague com Abacaxi”</a></li>
+          <li><a href="noticia-abacaxi.html">Campanha “Pague com Abacaxi”</a></li>
         </ul>
       </div>
     </aside>
