fix:correcao de partes inutilizadas

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       <div class="logo">
           <div class="logo">🍍 PineBank</div>
       </div>
-      <nav class="menu-principal">
-        <a href="#produtos">Produtos & Serviços</a>
-        <a href="#sobre">Sobre</a>
-        <a href="#ajuda">Ajuda</a>
-        <a href="#contato">Contato</a>
-      </nav>
+      <nav class="marketing-top-nav">
+        <div class="nav-links">
+            <button class="btn-abrir-conta-nav" onclick="window.location.href='../cadastro/login.html'">Abrir Conta</button>
+        </div>
+    </nav>
     </div>
   </div>
 </header>
@@ -85,7 +84,6 @@
       <div class="noticias">
         <h3>Notícias & Atualizações</h3>
         <ul>
-          <li><a href="#">Nova funcionalidade no app Pine</a></li>
           <li><a href="noticia-fintech-x.html">Parceria com fintech X</a></li>
           <li><a href="noticia-abacaxi.html">Campanha “Pague com Abacaxi”</a></li>
         </ul>
