--- a/noticia-fintech-x.html
+++ b/noticia-fintech-x.html
@@ -35,7 +35,7 @@
       </ul>
 
       <h2>Uma Visão para o Futuro: Finanças Autônomas</h2>
-      <p>"Nossa missão no PineBank é remover a complexidade da vida financeira. Não basta mostrar ao cliente para onde o dinheiro foi; queremos ajudá-lo a decidir para onde o dinheiro *deve* ir," disse o CEO Fictício do PineBank.</p>
+      <p>"Nossa missão no PineBank é remover a complexidade da vida financeira. Não basta mostrar ao cliente para onde o dinheiro foi; queremos ajudá-lo a decidir para onde o dinheiro deve ir," disse o CEO Fictício do PineBank.</p>
       <p>"A tecnologia da Fintech X é a melhor do mercado para isso. Ela permite um nível de personalização que antes era impossível. Estamos caminhando para um futuro de finanças autônomas, onde o aplicativo trabalha ativamente para a saúde financeira do cliente, e não o contrário."</p>
       <p>A nova funcionalidade "Pine Insights" começará a ser liberada em fases para os clientes a partir da próxima atualização do aplicativo, prevista para o início de novembro.</p>
 
